lab7-demucs-kubernetes-IamAdiSri/rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-server
  namespace: default
spec:
  selector:
    matchLabels:
      app: rest-server
  template:
    metadata:
      labels:
        app: rest-server
    spec:
      containers:
      - name: rest-server
        image: iamadisri/demucs-rest:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 5000
