lab7-demucs-kubernetes-IamAdiSri/rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-svc
spec:
  type: NodePort
  selector:
    app: rest-server
  ports:
  - name: rest-svc
    port: 5000
    targetPort: 5000
