lab7-demucs-kubernetes-IamAdiSri/rest/rest-ingress.yaml
#
# See https://kubernetes.io/docs/concepts/services-networking/ingress/
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-ingress
  annotations:
    # use the shared ingress-nginx
    # kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/proxy-body-size: 16m
    kubernetes.io/ingress.class: "gce"
spec:
  #
  # Your ingress rules here
  #
  rules:
  # - host: localhost
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: rest-svc
            port:
              number: 5000
